src/test/ui/traits/traits-issue-23003-overflow.stderr
error: compilation successful
  --> $DIR/traits-issue-23003-overflow.rs:29:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

